samples/_failures_safe/1761152651_6f0e80_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f06abfb.c: In function ‘main’:
./samples/SAFE/__tmp_3f06abfb.c:177:5: error: expected ‘,’ or ‘;’ at end of input
  177 |     size_t len = strlen
      |     ^~~~~~
./samples/SAFE/__tmp_3f06abfb.c:177:5: error: expected declaration or statement at end of input
